apps/infra/traefik/gateway_class.yml
kind:       GatewayClass
apiVersion: gateway.networking.k8s.io/v1

metadata:
  name: traefik

spec:
  controllerName: traefik.io/gateway-controller
