apps/infra/traefik/gateway.yml
kind:       Gateway
apiVersion: gateway.networking.k8s.io/v1

metadata:
  name:      traefik-gateway
  namespace: traefik
spec:
  gatewayClassName: traefik
  
  listeners:
    - name:     http
      protocol: HTTP
      port:     80
      allowedRoutes:
        namespaces:
          from: All  # Same, All
    
    - name:     https
      protocol: HTTPS
      port:     443
      tls:
        mode: Terminate
        certificateRefs:
          - name:      secret-selfsigned-tls
            namespace: default
          # - kind: Secret
          #   name: local-selfsigned-tls  # the Secret we created before the installation
          #   group: ""
      allowedRoutes:
        namespaces:
          from: All
